--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,13 @@
     <artifactId>spring-security-taglibs</artifactId>
     <version>4.1.2.RELEASE</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>4.1.2.RELEASE</version>
+</dependency>
+
 <!-- https://mvnrepository.com/artifact/org.springframework.webflow/spring-webflow -->
 <dependency>
     <groupId>org.springframework.webflow</groupId>
